Bug 383557 - Journalctl issues an error every 2 seconds QDBusObjectPath: invalid path ""
Summary: Journalctl issues an error every 2 seconds QDBusObjectPath: invalid path ""
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 5.9.5
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: 1.0
Assignee: David Edmundson
URL: https://bugzilla.redhat.com/show_bug....
Keywords:
Depends on:
Blocks:
 
Reported: 2017-08-15 14:52 UTC by Dominik Kucher
Modified: 2017-08-28 12:35 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dominik Kucher 2017-08-15 14:52:48 UTC
i have write on Jul 5 2017 a bug report to red hat and the maintainer means i should write a bug report to kde -> https://bugzilla.redhat.com/show_bug.cgi?id=1467871

journalctl gives me an error every 2 seconds and it makes me sick when i debug software and constantly appears the message between. 

Aug 15 16:51:03 srv.home plasmashell[11426]: QDBusObjectPath: invalid path ""
Aug 15 16:51:03 srv.home plasmashell[11426]: QDBusObjectPath: invalid path ""
Comment 1 Kai Uwe Broulik 2017-08-25 12:32:39 UTC
Are you using plasma-browser-integration?
Comment 2 Kai Uwe Broulik 2017-08-25 12:37:43 UTC
Patch https://phabricator.kde.org/D7538
Comment 3 Dominik Kucher 2017-08-25 17:07:35 UTC
No, i am not using a plasma-browser-integration. i will test the patch and give you feedback
Comment 4 Dominik Kucher 2017-08-25 17:09:16 UTC
can you please provide a .patch file that i am can rebuild the plasma desktop with fedora rpms
Comment 5 Kai Uwe Broulik 2017-08-25 18:13:20 UTC
https://phabricator.kde.org/D7538?download=true
Comment 6 Dominik Kucher 2017-08-27 06:37:23 UTC
it's not possible to rebuild with your patch

[dsoft@srv:~/rpmbuild/SPECS]$ rpmbuild -bb plasma-desktop.spec 
Ausführung(%prep): /bin/sh -e /var/tmp/rpm-tmp.Hevs7b
+ umask 022
+ cd /home/dsoft/rpmbuild/BUILD
+ cd /home/dsoft/rpmbuild/BUILD
+ rm -rf plasma-desktop-5.9.5
+ /usr/bin/tar -xof -
+ /usr/bin/xz -dc /home/dsoft/rpmbuild/SOURCES/plasma-desktop-5.9.5.tar.xz
+ STATUS=0
+ '[' 0 -ne 0 ']'
+ cd plasma-desktop-5.9.5
+ /usr/bin/chmod -Rf a+rX,u+w,g-w,o-w .
+ echo 'Patch #100 (plasma-desktop-5.8-default_favorites.patch):'
Patch #100 (plasma-desktop-5.8-default_favorites.patch):
+ /usr/bin/patch --no-backup-if-mismatch -p1 --fuzz=0
patching file applets/kickoff/package/contents/config/main.xml
+ echo 'Patch #200 (qdbus.patch):'
Patch #200 (qdbus.patch):
+ /usr/bin/patch --no-backup-if-mismatch -p0 --fuzz=0
can't find file to patch at input line 4
Perhaps you used the wrong -p or --strip option?
The text leading up to this was:
--------------------------
| diff --git a/dataengines/mpris2/playercontainer.cpp b/dataengines/mpris2/playercontainer.cpp
|--- a/dataengines/mpris2/playercontainer.cpp
|+++ b/dataengines/mpris2/playercontainer.cpp
--------------------------
File to patch: 

----- cut from spec file ---- 
%prep
%setup -q

## downstream patches
%patch100 -p1

%patch200 -p1
Comment 7 Rex Dieter 2017-08-27 17:33:08 UTC
Need to use patch with -p1 option
Comment 8 Dominik Kucher 2017-08-28 07:01:16 UTC
I have test it with -p0 and -p1 but the same error
Comment 9 Kai Uwe Broulik 2017-08-28 12:17:54 UTC
Git commit 1a95e7c7e14643dfc297208dd8ad1601cc71d538 by Kai Uwe Broulik.
Committed on 28/08/2017 at 12:16.
Pushed by broulik into branch 'master'.

[MPris Engine] Don't construct QDBusObjectPath in Metadata update

Creating one from an empty string prints a warning and here we don't actually need
a fully-fledged QDBusObjectPath, we can just compare strings.

Differential Revision: https://phabricator.kde.org/D7538

M  +2    -2    dataengines/mpris2/playercontainer.cpp

https://commits.kde.org/plasma-workspace/1a95e7c7e14643dfc297208dd8ad1601cc71d538
Comment 10 Dominik Kucher 2017-08-28 12:34:53 UTC
same error when i try to rebuild it

[dsoft@srv:~/rpmbuild/SPECS]$ rpmbuild -bb plasma-desktop.spec 
Ausführung(%prep): /bin/sh -e /var/tmp/rpm-tmp.LmdU8v
+ umask 022
+ cd /home/dsoft/rpmbuild/BUILD
+ cd /home/dsoft/rpmbuild/BUILD
+ rm -rf plasma-desktop-5.9.5
+ /usr/bin/xz -dc /home/dsoft/rpmbuild/SOURCES/plasma-desktop-5.9.5.tar.xz
+ /usr/bin/tar -xof -
+ STATUS=0
+ '[' 0 -ne 0 ']'
+ cd plasma-desktop-5.9.5
+ /usr/bin/chmod -Rf a+rX,u+w,g-w,o-w .
+ echo 'Patch #100 (plasma-desktop-5.8-default_favorites.patch):'
Patch #100 (plasma-desktop-5.8-default_favorites.patch):
+ /usr/bin/patch --no-backup-if-mismatch -p1 --fuzz=0
patching file applets/kickoff/package/contents/config/main.xml
+ echo 'Patch #200 (qdbus.patch):'
Patch #200 (qdbus.patch):
+ /usr/bin/patch --no-backup-if-mismatch -p1 --fuzz=0
can't find file to patch at input line 5
Perhaps you used the wrong -p or --strip option?
The text leading up to this was:
--------------------------
|diff --git a/dataengines/mpris2/playercontainer.cpp b/dataengines/mpris2/playercontainer.cpp
|index 7120c1d..6f528c8 100644
|--- a/dataengines/mpris2/playercontainer.cpp                                                                                                                                                        
|+++ b/dataengines/mpris2/playercontainer.cpp                                                                                                                                                        
--------------------------                                                                                                                                                                           
File to patch: ^C                                                                                                                                                                                    
[dsoft@srv:~/rpmbuild/SPECS]$ rpmbuild -bb plasma-desktop.spec                                                                                                                                       
Ausführung(%prep): /bin/sh -e /var/tmp/rpm-tmp.dGk9ZR                                                                                                                                                
+ umask 022                                                                                                                                                                                          
+ cd /home/dsoft/rpmbuild/BUILD                                                                                                                                                                      
+ cd /home/dsoft/rpmbuild/BUILD                                                                                                                                                                      
+ rm -rf plasma-desktop-5.9.5                                                                                                                                                                        
+ /usr/bin/tar -xof -                                                                                                                                                                                
+ /usr/bin/xz -dc /home/dsoft/rpmbuild/SOURCES/plasma-desktop-5.9.5.tar.xz                                                                                                                           
+ STATUS=0                                                                                                                                                                                           
+ '[' 0 -ne 0 ']'                                                                                                                                                                                    
+ cd plasma-desktop-5.9.5                                                                                                                                                                            
+ /usr/bin/chmod -Rf a+rX,u+w,g-w,o-w .                                                                                                                                                              
+ echo 'Patch #100 (plasma-desktop-5.8-default_favorites.patch):'                                                                                                                                    
Patch #100 (plasma-desktop-5.8-default_favorites.patch):                                                                                                                                             
+ /usr/bin/patch --no-backup-if-mismatch -p1 --fuzz=0                                                                                                                                                
patching file applets/kickoff/package/contents/config/main.xml                                                                                                                                       
+ echo 'Patch #200 (qdbus.patch):'                                                                                                                                                                   
Patch #200 (qdbus.patch):                                                                                                                                                                            
+ /usr/bin/patch --no-backup-if-mismatch -p0 --fuzz=0                                                                                                                                                
can't find file to patch at input line 5                                                                                                                                                             
Perhaps you used the wrong -p or --strip option?                                                                                                                                                     
The text leading up to this was:                                                                                                                                                                     
--------------------------                                                                                                                                                                           
|diff --git a/dataengines/mpris2/playercontainer.cpp b/dataengines/mpris2/playercontainer.cpp                                                                                                        
|index 7120c1d..6f528c8 100644                                                                                                                                                                       
|--- a/dataengines/mpris2/playercontainer.cpp                                                                                                                                                        
|+++ b/dataengines/mpris2/playercontainer.cpp                                                                                                                                                        
--------------------------
File to patch:
Comment 11 Kai Uwe Broulik 2017-08-28 12:35:59 UTC
I just pushed to master, so you can grab it from there verbatim.