[MPris Engine] Don't construct QDBusObjectPath in Metadata update

Creating one from an empty string prints a warning and here we don't actually need
a fully-fledged QDBusObjectPath, we can just compare strings.

BUG: 383557

Differential Revision: https://phabricator.kde.org/D7538